fixed issue where searchbar border would be cutoff when focused

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -162,6 +162,7 @@ li {
 	overflow-x: hidden;
 	font-family: chirp;
 	font-weight: light;
+	background-color: #ffffff;
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		flex-direction: row;
@@ -773,7 +774,7 @@ button:hover {
 	top: -0.5px;
 	display: flex;
 	flex-direction: column;
-	z-index: 1;
+	//z-index: 1;
 	border-bottom: var(--main-border-style);
 
 	@media only screen and (width>=500px) {
@@ -1479,12 +1480,13 @@ button:hover {
 	@media screen and (width>=988px) {
 		width: 100%;
 		height: 44px;
-		border: none;
 		border-radius: 99px;
-		background-color: rgba(239, 243, 244, 255);
+		//background-color: rgba(239, 243, 244, 255);
 		margin-top: 4.5px;
+		//margin-bottom: 10px;
 		box-sizing: border-box;
 		display: flex;
+		align-items: center;
 		border: solid 1px white;
 	}
 
@@ -1517,16 +1519,21 @@ button:hover {
 		margin: 0;
 		outline: none;
 		display: flex;
-		padding: 0 0 0 11px;
+		padding: 13px 0 12px 12px;
 		font-stretch: extra-expanded;
+		border:0;
+		height: 18px;
 	}
 
 	&_input::placeholder {
 		font-size: 15px;
 		letter-spacing: normal;
 		text-align: left;
+		line-height: normal;
 		font-stretch: 100%;
 		font-weight: 400;
+		//color: rgb(15, 20, 25);
+
 	}
 }
 
